--- a/intro.html
+++ b/intro.html
@@ -74,7 +74,7 @@
    
 
 
-    <section class="d-flex justify-content-center align-items-center vh-100">
+    <section class="d-flex justify-content-center align-items-center vh-100 py-5 py-md-0">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-12 col-md-4 col-lg-3">
