--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <nav class="navbar navbar-dark bg-dark fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="index.html">
                         <img class="img-nav" src="images/roxana-wego-logo.png(1).png" alt="">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
                     </button>
                     <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Wego</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
@@ -33,13 +33,7 @@
                                 <a class="nav-link" href="intro.html" target="_blank">Intro</a>
                             </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#testimonials">
-                                <button>
-                                    <span class="box">
-                                    Home
-                                    </span>
-                                </button></a>
-                                
+                            <a class="nav-link active" aria-current="page" href="#testimonials">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#stories">Stories</a>
@@ -872,7 +866,7 @@
                                 <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                                 <div class="row mt-5 g-3">
                                 <div class="col-12 col-lg-4 ">
-                                <a href="https://eg.wego.com/en/flights/cai/ssh/cheapest-flights-from-cairo-to-sharm-el-sheikh?ts_code=83981&wg_source=icubes&wg_medium=affiliate&wg_adgroup=8267&wg_content=3990_8267&wg_campaign=META&gad_source=1&gclid=Cj0KCQiA6Ou5BhCrARIsAPoTxrDP5sOu-33vZsDmQRo9nvt-M9AMjpH51A9CWpVShBTkzUt4rKoZpsIaAkskEALw_wcB" target="_blank">
+                                <a href="https://edu-weberp.odoo.com/shop/sharm-el-sheikh-30" target="_blank">
                                 <div class="inner">
                                 <article class="services-article bg-white rounded-3 d-flex">
                                 <div class="left-1 rounded-1 me-2">
@@ -888,7 +882,7 @@
                                 </a>
                                 </div>
                                 <div class="col-12 col-lg-4 ">
-                                <a href="https://eg.wego.com/en/flights/cai/ath?ts_code=83981&wg_source=icubes&wg_medium=affiliate&wg_adgroup=8267&wg_content=3990_8267&wg_campaign=META&gad_source=1&gclid=Cj0KCQiA6Ou5BhCrARIsAPoTxrDP5sOu-33vZsDmQRo9nvt-M9AMjpH51A9CWpVShBTkzUt4rKoZpsIaAkskEALw_wcB" target="_blank">
+                                <a href="https://edu-weberp.odoo.com/shop/athens-27" target="_blank">
                                 <div class="inner">
                                 <article class="services-article bg-white rounded-3 d-flex">
                                 <div class="left-2 rounded-1 me-2">
@@ -904,7 +898,7 @@
                                 </a>
                                 </div>
                                 <div class="col-12 col-lg-4 ">
-                                <a href="https://eg.wego.com/en/flights/cai/ist?ts_code=83981&wg_source=icubes&wg_medium=affiliate&wg_adgroup=8267&wg_content=3990_8267&wg_campaign=META&gad_source=1&gclid=Cj0KCQiA6Ou5BhCrARIsAPoTxrDP5sOu-33vZsDmQRo9nvt-M9AMjpH51A9CWpVShBTkzUt4rKoZpsIaAkskEALw_wcB" target="_blank">
+                                <a href="https://edu-weberp.odoo.com/shop/istanbul-31" target="_blank">
                                 <div class="inner">
                                 <article class="services-article bg-white rounded-3 d-flex">
                                 <div class="left-3 rounded-1 me-2">
@@ -920,7 +914,7 @@
                                 </a>
                                 </div>
                                 <div class="col-12 col-lg-4 ">
-                                <a href="https://eg.wego.com/en/flights/cai/ahb?ts_code=83981&wg_source=icubes&wg_medium=affiliate&wg_adgroup=8267&wg_content=3990_8267&wg_campaign=META&gad_source=1&gclid=Cj0KCQiA6Ou5BhCrARIsAPoTxrDP5sOu-33vZsDmQRo9nvt-M9AMjpH51A9CWpVShBTkzUt4rKoZpsIaAkskEALw_wcB" target="_blank">
+                                <a href="https://edu-weberp.odoo.com/shop/abha-32" target="_blank">
                                 <div class="inner">
                                 <article class="services-article bg-white rounded-3 d-flex">
                                 <div class="left-4 rounded-1 me-2">
@@ -936,7 +930,7 @@
                                 </a>
                                 </div>
                                 <div class="col-12 col-lg-4 ">
-                                <a href="https://eg.wego.com/en/flights/cai/znz?ts_code=83981&wg_source=icubes&wg_medium=affiliate&wg_adgroup=8267&wg_content=3990_8267&wg_campaign=META&gad_source=1&gclid=Cj0KCQiA6Ou5BhCrARIsAPoTxrDP5sOu-33vZsDmQRo9nvt-M9AMjpH51A9CWpVShBTkzUt4rKoZpsIaAkskEALw_wcB" target="_blank">
+                                <a href="https://edu-weberp.odoo.com/shop/zanzibar-city-34" target="_blank">
                                 <div class="inner">
                                 <article class="services-article bg-white rounded-3 d-flex">
                                 <div class="left-5 rounded-1 me-2">
@@ -968,7 +962,7 @@
                                 </a>
                                 </div>
                                 <div class="col-12 col-lg-4 ">
-                                <a href="https://eg.wego.com/en/flights/cai/bcn?ts_code=83981&wg_source=icubes&wg_medium=affiliate&wg_adgroup=8267&wg_content=3990_8267&wg_campaign=META&gad_source=1&gclid=Cj0KCQiA6Ou5BhCrARIsAPoTxrDP5sOu-33vZsDmQRo9nvt-M9AMjpH51A9CWpVShBTkzUt4rKoZpsIaAkskEALw_wcB" target="_blank">
+                                <a href="https://edu-weberp.odoo.com/shop/barcelona-33" target="_blank">
                                 <div class="inner">
                                 <article class="services-article bg-white rounded-3 d-flex">
                                 <div class="left-7 rounded-1 me-2">
@@ -984,7 +978,7 @@
                                 </a>
                                 </div>
                                 <div class="col-12 col-lg-4 ">
-                                <a href="https://eg.wego.com/en/flights/cai/par?ts_code=83981&wg_source=icubes&wg_medium=affiliate&wg_adgroup=8267&wg_content=3990_8267&wg_campaign=META&gad_source=1&gclid=Cj0KCQiA6Ou5BhCrARIsAPoTxrDP5sOu-33vZsDmQRo9nvt-M9AMjpH51A9CWpVShBTkzUt4rKoZpsIaAkskEALw_wcB" target="_blank">
+                                <a href="https://edu-weberp.odoo.com/shop/paris-37" target="_blank">
                                 <div class="inner">
                                 <article class="services-article bg-white rounded-3 d-flex">
                                 <div class="left-8 rounded-1 me-2">
@@ -1000,7 +994,7 @@
                                 </a>
                                 </div>
                                 <div class="col-12 col-lg-4 ">
-                                <a href="https://eg.wego.com/en/flights/cai/vie?ts_code=83981&wg_source=icubes&wg_medium=affiliate&wg_adgroup=8267&wg_content=3990_8267&wg_campaign=META&gad_source=1&gclid=Cj0KCQiA6Ou5BhCrARIsAPoTxrDP5sOu-33vZsDmQRo9nvt-M9AMjpH51A9CWpVShBTkzUt4rKoZpsIaAkskEALw_wcB" target="_blank">
+                                <a href="https://edu-weberp.odoo.com/shop/vienna-35" target="_blank">
                                 <div class="inner">
                                 <article class="services-article bg-white rounded-3 d-flex">
                                 <div class="left-9 rounded-1 me-2">
