--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                     <div class="card text-center">
                         <p class="fw-semibold m-2">The best of Steigenberger <br> Hotels & Resorts</p>
                         <span class="text-muted">2 properties</span>
-                        <a href="#" target="_blank">
+                        <a href="https://eg.wego.com/hotels/searches/SPX/2024-12-23/2024-12-24/1/2?brands=241&open_calendar=&guests=2&sort=popularity&order=desc&view=map" target="_blank">
                         <img class="w-100 rounded" src="images/Hotels.1.png" alt="Hotel 1">
                         </a>
                     </div>
@@ -611,7 +611,7 @@
                     <div class="card text-center">
                         <p class="fw-semibold m-2">Most Recommended Hostel / Backpacker in Giza</p>
                         <span class="text-muted">12 properties</span>
-                        <a href="#" target="_blank">
+                        <a href="https://eg.wego.com/hotels/searches/SPX/2024-12-23/2024-12-24/1/2?accommodation_types=2&open_calendar=&guests=2&sort=popularity&order=desc&view=map" target="_blank">
                         <img class="w-100 rounded" src="images/Screenshot_404.png" alt="Hotel 2">
                         </a>
                     </div>
@@ -621,7 +621,7 @@
                         <p class="fw-semibold m-2">Highest Rated Hotels in Giza</p>
                         <br>
                         <span class="text-muted">46 properties</span>
-                        <a href="#" target="_blank">
+                        <a href="https://eg.wego.com/hotels/searches/SPX/2024-12-23/2024-12-24/1/2?stars=5&open_calendar" target="_blank">
                         <img class="w-100 rounded" src="images/Screenshot_408.png" alt="Hotel 3">
                         </a>
                     </div>
@@ -631,7 +631,7 @@
                         <p class="fw-semibold m-2">Top 5-star hotels</p>
                         <br>
                         <span class="text-muted">5 properties</span>
-                        <a href="#" target="_blank">
+                        <a href="https://eg.wego.com/hotels/egypt/giza" target="_blank">
                         <img class="w-100 rounded" src="images/Hotels.2.png" alt="Hotel 4">
                         </a>
                     </div>
@@ -647,7 +647,7 @@
                         <p class="fw-semibold m-2">Curated selection of Pyramisa</p>
                         <br>
                         <span class="text-muted">1 property</span>
-                        <a href="#" target="_blank">
+                        <a href="https://eg.wego.com/hotels/searches/SPX/2024-12-30/2024-12-31/1/2/1703300?open_calendar=&guests=2&search_id=71a5a9fcd02b4feb" target="_blank">
                         <img class="w-100 rounded" src="images/Hotels.3.png" alt="Hotel 5">
                         </a>
                     </div>
@@ -657,7 +657,7 @@
                         <p class="fw-semibold m-2">Top Rated Guest house picks <br> in Giza</p>
                         
                         <span class="text-muted">20 properties</span>
-                        <a href="#" target="_blank">
+                        <a href="https://eg.wego.com/hotels/searches/SPX/2024-12-23/2024-12-24/1/2?brands=733&open_calendar" target="_blank">
                         <img class="w-100 rounded" src="images/ideas222.png" alt="Hotel 6">
                         </a>
                     </div>
@@ -667,7 +667,7 @@
                         <p class="fw-semibold m-2">Aracan Pyramids Hotel</p>
                         <br>
                         <span class="text-muted">15 properties</span>
-                        <a href="#" target="_blank">
+                        <a href="https://eg.wego.com/hotels/searches/SPX/2024-12-30/2024-12-31/1/2/1414988?open_calendar=&guests=2&search_id=e6a80bed1161fb63" target="_blank">
                         <img class="w-100 rounded" src="images/Screenshot_410.png" alt="Hotel 7">
                         </a>
                     </div>
@@ -677,7 +677,7 @@
                         <p class="fw-semibold m-2">Hand-picked 4-star hotels</p>
                         <br>
                         <span class="text-muted">21 properties</span>
-                        <a href="#" target="_blank">
+                        <a href="https://eg.wego.com/hotels/searches/SPX/2024-12-23/2024-12-24/1/2?stars=4&open_calendar" target="_blank">
                         <img class="w-100 rounded" src="images/Hotels.5.png" alt="Hotel 8">
                         </a>
                     </div>
@@ -2031,64 +2031,57 @@
                         <div class="text-center feedback">
                         <img class="page-5-img" src="images/Round Photo_Dec162024_080441.png" alt="New1..">
                         <p class="opacity-50">
-                            Lorem Ipsum has been the industry's standard dummy text ever
-                            since the when an unknown printer took a galley of type <br> and
-                            scrambled it to make a type specimen book.
+                            As a Front-End Developer, I specialize in creating responsive and visually appealing user interfaces using <br> HTML, CSS, JavaScript, and React. <br>
+                             I focus on delivering seamless web experiences, optimizing performance, and ensuring compatibility across devices and browsers.
                         </p>
                         <h6 class="pt-3">Abanoub Samy
                         </h6>
-                        <p class="mb-5 pb-4 page-5-text">Envato Customer</p>
+                        <p class="mb-5 pb-4 page-5-text">front end developer</p>
                         </div>
                     </div>
                     <div data-bs-interval="2500ms"2000ms class="carousel-item">
                         <div class="text-center feedback">
                         <img class="page-5-img" src="images/Round Photo_Dec162024_092858.png" alt="New1..">
                         <p class="opacity-50">
-                            Lorem Ipsum has been the industry's standard dummy text ever
-                            since the when an unknown printer took a galley of type <br> and
-                            scrambled it to make a type specimen book.
+                            Front-End Developer passionate about crafting innovative, interactive web applications with technologies like <br> HTML, CSS, JavaScript, and modern frameworks. <br> Focused on delivering exceptional user experiences and staying ahead of trends to create impactful digital solutions.
                         </p>
                         <h6 class="pt-3">Mostafa Sayed
                         </h6>
-                        <p class="mb-5 pb-4 page-5-text">Envato Customer</p>
+                        <p class="mb-5 pb-4 page-5-text">front end developer
+
+                        </p>
                         </div>
                     </div>
                     <div data-bs-interval="2500ms" class="carousel-item">
                         <div class="text-center feedback">
                         <img class="page-5-img" src="images/Round Photo_Dec182024_231448.png" alt="New1..">
                         <p class="opacity-50">
-                            Lorem Ipsum has been the industry's standard dummy text ever
-                            since the when an unknown printer took a galley of type <br> and
-                            scrambled it to make a type specimen book.
+                            Certified Personal Trainer,  <br>Certified Fitness Trainer, Nutrition Coach, and Bodybuilder with expertise in creating personalized fitness and nutrition plans. <br> As an Online Coach, I help clients achieve sustainable results and optimize performance through tailored strategies and motivational support.
                         </p>
                         <h6 class="pt-3">Philip Ehab
                         </h6>
-                        <p class="mb-5 pb-4 page-5-text">Envato Customer</p>
+                        <p class="mb-5 pb-4 page-5-text">Online Coach</p>
                         </div>
                     </div>
                     <div data-bs-interval="2500ms" class="carousel-item">
                         <div class="text-center feedback">
                         <img class="page-5-img" src="images/Round Photo_Dec182024_232155.png" alt="New1..">
                         <p class="opacity-50">
-                            Lorem Ipsum has been the industry's standard dummy text ever
-                            since the when an unknown printer took a galley of type <br> and
-                            scrambled it to make a type specimen book.
+                            Creative Graphic Designer skilled in Adobe Photoshop, Illustrator, and InDesign. <br> I specialize in crafting memorable brand identities, <br>  logos, and marketing visuals. With a focus on innovation and precision, I create designs that inspire and leave a lasting impression.
                         </p>
                         <h6 class="pt-3">A'laa Ashraf
                         </h6>
-                        <p class="mb-5 pb-4 page-5-text">Envato Customer</p>
+                        <p class="mb-5 pb-4 page-5-text">graphic designer</p>
                         </div>
                     </div>
                     <div data-bs-interval="2500ms" class="carousel-item">
                         <div class="text-center feedback">
                         <img class="page-5-img" src="images/Round Photo_Dec182024_232441.png" alt="New1..">
                         <p class="opacity-50">
-                            Lorem Ipsum has been the industry's standard dummy text ever
-                            since the when an unknown printer took a galley of type <br> and
-                            scrambled it to make a type specimen book.
+                            A creative digital marketer and graphic designer with a passion for crafting compelling visuals and powerful marketing strategies. <br> I specialize in bringing brands to life, driving engagement, and achieving results. <br> Let’s collaborate to make your vision a reality
                         </p>
                         <h6 class="pt-3">Eman Mahmoud</h6>
-                        <p class="mb-5 pb-4 page-5-text">Envato Customer</p>
+                        <p class="mb-5 pb-4 page-5-text">Digital marketing</p>
                         </div>
                     </div>
                     </div>
